test/equality/negative/comp_polymorphic_equality.mli
val f : 'a -> 'a -> int
(*@ comparison *)
